--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "express": "^3.5.1",
     "ldapjs": "^0.7.0",
+    "moment": "^2.5.1",
+    "passport": "^0.2.0",
+    "passport-google": "^0.3.0",
     "start-stop-daemon": "^0.1.0"
   },
   "scripts": {
